# distributed-embedding-search-lakehouse

./: .gitignore  ARCHITECTURE_NOTES.md  README.md  README_initial.md  main.py  modal_app copy.py  modal_app.py  modal_app_hc.py  modal_pipeline.py  pyproject.toml  requirements.txt
docs/: ARCHITECTURE_NOTES.md  BATTLE_SCARS.md  DESIGN.md  EXECUTABLE_PLAN.md  MULTIMODAL_TRAINING_DATA_ARCHITECTURE.md  RAY_PREPROCESSING_SCALING.md  STUDY_GUIDE_CHECKLIST.md
docs/assets/: horizontal_excalidraw.image  multimodal-training-data-pipeline.excalidraw
scripts/: 000_run_connectors.py  001_run_preprocessing.py  002_filter_and_dedup.py  003_build_catalog.py  004_create_version.py  005_materialize_shards.py  006_loader_benchmark.py  007_compare_versions.py  008_precompute_assets.py  009_tag_licenses.py  010_probe_video_dataset.py  01_make_sample.py  02_local_lancedb_smoke_test.py  02_local_lancedb_text_smoke_test.py  03_local_ray_text_embed.py  04_local_ray_text_search.py  05_make_coco_sample.py  06_local_lancedb_image_smoke_test.py  07_local_ray_image_embed.py  08_local_ray_image_search.py
src/: cas.py  catalog.py  dedup.py  embedding_service.py  loader_benchmark.py  quality.py  sharding.py  versioning.py
src/connectors/: audio.py  base.py  image.py  text.py  video.py
src/preprocessing/: audio.py  base.py  clip.py  device.py  image.py  payload.py  text.py  video.py
static/: index.html
