[project]
name = "distributed-embedding-search-lakehouse"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "black>=26.5.1",
    "datasets>=2.20.0",
    "faiss-cpu>=1.14.2",
    "librosa>=0.11.0",
    "pandas>=2.0.0",
    "pyarrow>=15.0.0",
    "pillow>=10.0.0",
    "soundfile>=0.13.1",
    "torch>=2.12.0",
    "torchcodec",
    "transformers>=5.9.0",
]
